--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: Technology Evangelist
+title: Technical Evangelist
 email: vinay.pandella@gmail.com / vpandella@nisum.com
 description: "Working as a Team Lead at Nisum Technologies, am passionate about technology and impact of technology on human life."
 baseurl: ""
-url: "http://yourdomain.com"
+url: "http://vinaypandella.github.io/"
 comments: true
 
 # Build settings
